intenté optimizar el orden en el que se cargan las cosas pero los navegadores igual parece que siguen haciendo lo que les da la gana e ignorando todo, amo el web dev

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="dialog.css">
+		<link rel="stylesheet" href="dialog.css" fetchpriority="low">
 		<link rel="stylesheet" href="commonassets/fonts.css">
 
 		<link rel="icon" type="image/x-icon" href="img/favicon.jpg">
 
-		<script defer src="js/random.js"></script>
-		<script defer src="js/background.js"></script>
+		<script defer src="js/random.js" fetchpriority="high"></script>
+		<script defer src="js/background.js" fetchpriority="high"></script>
+		<script defer src="js/language.js" fetchpriority="high"></script>
 		<script defer src="js/modals.js"></script>
-		<script defer src="js/language.js"></script>
 		<script defer src="js/music.js"></script>
 	</head>
 
@@ -52,32 +52,32 @@
 						<div>
 							<article>
 								<a href="https://github.com/idko2004/mal-randomizer" target="_blank">
-									<img src="img/malrandomizer.svg" class="card titletxt" titletxt="tmal" right-click="modal-mal" alt="MyAnimeList randomizer" title="mal-randomizer: Find what anime to watch next">
+									<img src="img/malrandomizer.svg" fetchpriority="high" class="card titletxt" titletxt="tmal" right-click="modal-mal" alt="MyAnimeList randomizer" title="mal-randomizer: Find what anime to watch next">
 								</a>
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/md-view" target="_blank">
-									<img src="img/mdview.svg" class="card titletxt" titletxt="tmdview" right-click="modal-mdview" alt="md-view" title="md-view: Markdown Viewer">
+									<img src="img/mdview.svg" fetchpriority="high" class="card titletxt" titletxt="tmdview" right-click="modal-mdview" alt="md-view" title="md-view: Markdown Viewer">
 								</a>
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/unidad" target="_blank">
-									<img src="img/unidad.svg" class="card titletxt" titletxt="tunidad" right-click="modal-unidad" alt="Unidad" title="Unidad: LAN cards game">
+									<img src="img/unidad.svg" fetchpriority="high" class="card titletxt" titletxt="tunidad" right-click="modal-unidad" alt="Unidad" title="Unidad: LAN cards game">
 								</a>
 							</article>
 							<article>
 								<a href="https://github.com/idko2004/colon-three-bot" target="_blank">
-									<img src="img/colon-three-bot.svg" class="card titletxt" titletxt="tcolonthree" right-click="modal-colonthreebot" alt="colon-three-bot" title="colon-three-bot: A Discord bot that does :3">
+									<img src="img/colon-three-bot.svg" fetchpriority="high" class="card titletxt" titletxt="tcolonthree" right-click="modal-colonthreebot" alt="colon-three-bot" title="colon-three-bot: A Discord bot that does :3">
 								</a>
 							</article>
 							<article>
 								<a href="https://github.com/idko2004/secret-santa" target="_blank">
-									<img src="img/secretsanta.svg" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="Secret santa" title="Secret Santa: Organize a secret santa between your friends on discord">
+									<img src="img/secretsanta.svg" fetchpriority="high" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="Secret santa" title="Secret Santa: Organize a secret santa between your friends on discord">
 								</a>
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/random/index.html" target="_blank">
-									<img src="img/random.svg" class="card titletxt" titletxt="trandom" right-click="modal-random" alt="Random" title="Random: Choose a random item from a list.">
+									<img src="img/random.svg" fetchpriority="high" class="card titletxt" titletxt="trandom" right-click="modal-random" alt="Random" title="Random: Choose a random item from a list.">
 								</a>
 							</article>
 						</div>
@@ -91,32 +91,32 @@
 						<div>
 							<article>
 								<a href="https://github.com/idko2004/cosa-matematicas" target="_blank">
-									<img src="img/cosa-matematicas.svg" class="card titletxt" titletxt="tcosa" right-click="modal-cosa" alt="cosa-matematicas" title='cosa-matemáticas: Helps with one specific math homework.'>
+									<img src="img/cosa-matematicas.svg" fetchpriority="high" class="card titletxt" titletxt="tcosa" right-click="modal-cosa" alt="cosa-matematicas" title='cosa-matemáticas: Helps with one specific math homework.'>
 								</a>
 							</article>
 							<article>
 								<a href="https://github.com/idko2004/random-c" target="_blank">
-									<img src="img/randomc.svg" class="card titletxt" titletxt="trandomc" right-click="modal-randomc" alt="random-c" title='random-c: Generate a random number'>
+									<img src="img/randomc.svg" fetchpriority="high" class="card titletxt" titletxt="trandomc" right-click="modal-randomc" alt="random-c" title='random-c: Generate a random number'>
 								</a>
 							</article>
 							<article>
 								<a href="https://github.com/idko2004/scripts-and-things" target="_blank">
-									<img src="img/scriptsandthings.svg" class="card titletxt" titletxt="tscriptsandthings" right-click="modal-scriptsandthings" alt="scripts-and-things" title='scripts-and-things: Also known as dot-files'>
+									<img src="img/scriptsandthings.svg" fetchpriority="high" class="card titletxt" titletxt="tscriptsandthings" right-click="modal-scriptsandthings" alt="scripts-and-things" title='scripts-and-things: Also known as dot-files'>
 								</a>
 							</article>
 							<article>
 								<a href="https://github.com/idko2004/convertMusic" target="_blank">
-									<img src="img/convertmusic.svg" class="card titletxt" titletxt="tconvertmusic" right-click="modal-convertmusic" alt="convertMusic" title='convertMusic: Use ffmpeg to convert a folder of one type of files to another'>
+									<img src="img/convertmusic.svg" fetchpriority="high" class="card titletxt" titletxt="tconvertmusic" right-click="modal-convertmusic" alt="convertMusic" title='convertMusic: Use ffmpeg to convert a folder of one type of files to another'>
 								</a>
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/dot-matrix" target="_blank">
-									<img src="img/dotmatrix.svg" class="card titletxt" titletxt="tmatrix" right-click="modal-dotmatrix" alt="Dot Matrix" title='Dot Matrix: "Simulating" a dot matrix billboard'>
+									<img src="img/dotmatrix.svg" fetchpriority="high" class="card titletxt" titletxt="tmatrix" right-click="modal-dotmatrix" alt="Dot Matrix" title='Dot Matrix: "Simulating" a dot matrix billboard'>
 								</a>
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/buscaminas/index.html" target="_blank">
-									<img src="img/buscaminas.svg" class="card titletxt" titletxt="tmines" right-click="modal-buscaminas" alt="Buscaminas" title='Buscaminas: The worst minesweeper you will ever play'>
+									<img src="img/buscaminas.svg" fetchpriority="high" class="card titletxt" titletxt="tmines" right-click="modal-buscaminas" alt="Buscaminas" title='Buscaminas: The worst minesweeper you will ever play'>
 								</a>
 							</article>
 						</div>
@@ -130,12 +130,12 @@
 						<div>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/notes/index.html" target="_blank">
-									<img src="img/notas.svg" class="card titletxt" titletxt="tnotas" right-click="modal-notas" alt="Notas" title="Notas: Simple notes application">
+									<img src="img/notas.svg" fetchpriority="high" class="card titletxt" titletxt="tnotas" right-click="modal-notas" alt="Notas" title="Notas: Simple notes application">
 								</a>
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/idko-bot/index.html" target="_blank">
-									<img src="img/idkobot.svg" class="card titletxt" titletxt="tidkobot" right-click="modal-idkobot" alt="idko-bot" title="idko-bot: Multipurpose discord bot">
+									<img src="img/idkobot.svg" fetchpriority="high" class="card titletxt" titletxt="tidkobot" right-click="modal-idkobot" alt="idko-bot" title="idko-bot: Multipurpose discord bot">
 								</a>
 							</article>
 						</div>
@@ -784,23 +784,24 @@
 			</div>
 		</dialog>
 
+		<!--Prefetch zone-->
+			<link rel="stylesheet" href="prefetch.css" fetchpriority="low">
+			<!--Aquí poner fuentes para precargar-->
+			<!--Idealmente pondríamos todo aquí y con rel="prefetch" pero se ve que los navegadores son tontísimos-->
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/Ubuntu-Regular.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/Ubuntu-Italic.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/Ubuntu-Bold.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/Ubuntu-BoldItalic.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/TiltWarp-Regular-VariableFont.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/NotoSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/JetBrainsMono-VariableFont_wght.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/ComicNeue-Light.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/ComicNeue-Bold.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/UbuntuMono-Regular.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/UbuntuMono-Bold.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/UbuntuMono-Bold.ttf" as="font" type="font/ttf">
+			<link rel="preload" fetchpriority="low" href="commonassets/fonts/Rubik-VariableFont_wght.ttf" as="font" type="font/ttf">
+			<!--/Prefetch zone-->
 	</body>
-
-<!--Prefetch zone-->
-	<link rel="stylesheet" href="prefetch.css">
-	<!--Aquí poner fuentes para precargar-->
-	<!--Idealmente pondríamos todo aquí y con rel="prefetch" pero se ve que los navegadores son tontísimos-->
-	<link rel="preload" href="commonassets/fonts/Ubuntu-Regular.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/Ubuntu-Italic.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/Ubuntu-Bold.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/Ubuntu-BoldItalic.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/TiltWarp-Regular-VariableFont.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/NotoSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/JetBrainsMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/ComicNeue-Regular.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/ComicNeue-Bold.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/UbuntuMono-Regular.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="commonassets/fonts/UbuntuMono-Bold.ttf" as="font" type="font/ttf" crossorigin>
-<!--/Prefetch zone-->
 </html>
