necesito un servidor http que sea capaz de asumir index.html cuando no se especifica

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								</a>
 							</article>
 							<article>
-								<a href="http://idko.infinityfreeapp.com/md-view" target="_blank">
+								<a href="apps/md-view/" target="_blank">
 									<img src="img/mdview.svg" fetchpriority="high" class="card titletxt" titletxt="tmdview" right-click="modal-mdview" alt="md-view" title="md-view: Markdown Viewer">
 								</a>
 							</article>
