añadir md-view a github

--- a/apps/md-view/index.html
+++ b/apps/md-view/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<title>md-view</title>
 
-	<link rel="stylesheet" href="fonts.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/commonassets/fonts.css">
 
 	<script defer src="markdown.js"></script>
 	<script defer src="settings.js"></script>
