guía para instalar unidad en linux

--- a/apps/unidad/index.html
+++ b/apps/unidad/index.html
@@ -20,12 +20,39 @@
 
 		<section>
 			<div class="redTitleText">
-				Titulo este
+				Jugar Unidad
 			</div>
 
 			<div class="menuContent">
 				<p>
-					afasdff
+					Para jugar Unidad es necesario un Servidor de Unidad en tu red local
+				</p>
+				<p>
+					Si ya tienes configurado un Servidor, entra aquí para jugar:
+				</p>
+				<p>
+					<a href="play/">
+						<button>Entrar a jugar</button>
+					</a>
+				</p>
+			</div>
+		</section>
+
+		<hr>
+
+		<section>
+			<div class="redTitleText">
+				Cómo configurar un servidor
+			</div>
+
+			<div class="menuContent">
+				<p>
+					Aquí hay una guía que te ayudará a instalar y configurar el Servidor de Unidad:
+				</p>
+				<p>
+					<a href="setup/">
+						<button>Ver la guía</button>
+					</a>
 				</p>
 			</div>
 		</section>
