cambios a la página principal de unidad

--- a/apps/unidad/index.html
+++ b/apps/unidad/index.html
@@ -9,6 +9,19 @@
 
 	<link rel="stylesheet" type="text/css" href="play/css/style.css">
 	<link rel="stylesheet" type="text/css" href="/commonassets/fonts.css">
+	<style>
+		.menuContent
+		{
+			max-width: 90vw;
+			width: 60ch;
+			margin: 0 auto;
+		}
+		.menuContent p
+		{
+			text-align: center;
+			line-height: 1.4;
+		}
+	</style>
 </head>
 <body>
 	<div>
@@ -17,6 +30,23 @@
 				Unidad
 			</div>
 		</div>
+
+		<section>
+			<div class="menuContent">
+				<p>
+					Unidad es un juego de cartas multijugador que puedes jugar con los demás en tu red local.
+				</p>
+				<p>
+					Está muy fuertemente inspirado en UNO (de ahí el nombre tan horrible),<br>
+					pero cuenta con algunas reglas y cartas distintas.
+				</p>
+				<p>
+					<a href="" title="Todavía no está disponible hehe...">
+						<button disabled>Ver reglas</button>
+					</a>
+				</p>
+			</div>
+		</section>
 
 		<section>
 			<div class="redTitleText">
