actualizar bien index de private-do-not-enter

--- a/apps/private-do-not-enter/index.html
+++ b/apps/private-do-not-enter/index.html
@@ -33,7 +33,7 @@
 		<ul>
 			<li><a href="secret-santa/regalo.html">Regalo secret santa</a></li>
 			<li><a href="porqueHiceEsto/index.html">Minamimoto</a></li>
-			<li><a href="porqueHiceEsto/tarea1.html">Una tarea random</a></li>
+			<li><a href="tarea1.html">Una tarea random</a></li>
 		</ul>
 	</div>
 </body>
