--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			<div>
 				<header>
 					<span class="txt" txt="email">Email</span>
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-email"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-email" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<button id="email-copy">
@@ -215,7 +215,7 @@
 			<div>
 				<header>
 					<span class="txt" txt="chlang">Change language</span>
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-language"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-language" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<button class="langbtn" onclick="setLanguageBtn('es')">Español</button>
@@ -227,12 +227,12 @@
 			<div>
 				<header>
 					md-view
-					<a class="closemodal dark-icon" alt="close button" title="Close" modalparent="modal-mdview"></a>
+					<a class="closemodal dark-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-mdview" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link dark-icon" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code"></a>
-						<a class="project-link dark-icon" href="http://idko.infinityfreeapp.com/md-view" target="_blank" alt="go to project" title="Try it out"></a>
+						<a class="github-link dark-icon alttxt titletxt" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
+						<a class="project-link dark-icon alttxt titletxt" href="/apps/md-view/" target="_blank" alt="go to project" title="Try it out" alttxt="tryitout" titletxt="tryitout"></a>
 					</div>
 					<p class="txt" txt="mmdview1">Existential</p>
 					<p class="txt" txt="mmdview2">plastic</p>
@@ -270,12 +270,12 @@
 			<div>
 				<header>
 					Unidad
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-unidad"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-unidad" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/unidad" target="_blank" alt="github logo" title="View the source code"></a>
-						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/unidad" target="_blank" alt="go to project" title="Try it out"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/unidad" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
+						<a class="project-link light-icon alttxt titletxt" href="/apps/unidad" target="_blank" alt="go to project" title="Try it out" alttxt="tryitout" titletxt="tryitout"></a>
 					</div>
 					<p class="txt" txt="munidad1">cow</p>
 					<p class="txt" txt="munidad2">Damn</p>
@@ -331,11 +331,11 @@
 			<div>
 				<header>
 					:3 bot
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-colonthreebot"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-colonthreebot" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/colon-three-bot" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/colon-three-bot" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
 					<p class="txt" txt="m:31">center</p>
 					<p class="txt" txt="m:32">who</p>
@@ -389,11 +389,11 @@
 			<div>
 				<header>
 					Secret Santa
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-secretsanta"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-secretsanta" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/secret-santa" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/secret-santa" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
 					<p class="txt" txt="msanta1">lickity-split</p>
 					<p>
@@ -449,12 +449,12 @@
 			<div>
 				<header>
 					<img src="img/dotmatrix-title.svg" alt="Dot Matrix">
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-dotmatrix"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-dotmatrix" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/dot-matrix" target="_blank" alt="github logo" title="View the source code"></a>
-						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/dot-matrix" target="_blank" alt="go to project" title="Try it out"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/dot-matrix" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
+						<a class="project-link light-icon alttxt titletxt" href="/apps/dot-matrix" target="_blank" alt="go to project" title="Try it out" alttxt="tryitout" titletxt="tryitout"></a>
 					</div>
 					<p class="txt" txt="mmatrix1">human</p>
 					<p class="txt" txt="mmatrix2">wine</p>
@@ -486,11 +486,11 @@
 			<div>
 				<header>
 					convertMusic
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-convertmusic"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-convertmusic" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
 					<p class="txt" txt="mcm1">Flight</p>
 					<p class="txt" txt="mcm2">Luminary</p>
@@ -518,11 +518,11 @@
 			<div>
 				<header>
 					random-c
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-convertmusic"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-randomc" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/random-c" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
 					<p>
 						<span class="txt" txt="mrandom1">Entanglement</span>
@@ -548,11 +548,11 @@
 			<div>
 				<header>
 					mal-randomizer
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-mal"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-mal" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link dark-icon" href="https://github.com/idko2004/mal-randomizer" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="github-link dark-icon alttxt titletxt" href="https://github.com/idko2004/mal-randomizer" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
 					<p class="txt" txt="mmal1">asdf</p>
 					<p class="txt" txt="mmal2">fads</p>
@@ -589,11 +589,11 @@
 			<div>
 				<header>
 					cosa-matemáticas
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-cosa"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-cosa" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/cosa-matematicas" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/cosa-matematicas" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
 					<p class="txt" txt="mcosa1">wer</p>
 					<p class="txt" txt="mcosa2">dfsg</p>
@@ -616,11 +616,11 @@
 			<div>
 				<header>
 					Random
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-random"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-random" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/random/" target="_blank" alt="go to project" title="Try it out"></a>
+						<a class="project-link light-icon alttxt titletxt" href="apps/random/" target="_blank" alt="go to project" title="Try it out" alttxt="tryitout" titletxt="tryitout"></a>
 					</div>
 					<p class="txt" txt="mjsrandom1">something</p>
 					<p class="txt" txt="mjsrandom2">something</p>
@@ -658,11 +658,11 @@
 			<div>
 				<header>
 					Buscaminas
-					<a class="closemodal dark-icon" alt="close button" title="Close" modalparent="modal-buscaminas"></a>
+					<a class="closemodal dark-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-buscaminas" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="project-link dark-icon" href="http://idko.infinityfreeapp.com/buscaminas/" target="_blank" alt="go to project" title="Try it out"></a>
+						<a class="project-link dark-icon alttxt titletxt" href="/apps/buscaminas/" target="_blank" alt="go to project" title="Try it out" alttxt="tryitout" titletxt="tryitout"></a>
 					</div>
 					<p class="txt" txt="mmines1">something</p>
 					<div>
@@ -698,11 +698,11 @@
 			<div>
 				<header>
 					idko-bot
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-idkobot"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-idkobot" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/idko-bot/" target="_blank" alt="See webpage" title="See webpage"></a>
+						<a class="project-link light-icon alttxt titletxt" href="/apps/idko-bot/" target="_blank" alt="See webpage" title="See webpage" alttxt="seewebpage" titletxt="seewebpage"></a>
 					</div>
 					<p class="txt" txt="midkobot1">b</p>
 					<p>
@@ -741,12 +741,12 @@
 			<div>
 				<header>
 					Notas
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-notas"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-notas" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/notes" target="_blank" alt="github logo" title="View the source code"></a>
-						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/notes/index.html" target="_blank" alt="go to project" title="Try it out"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/notes" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
+						<a class="project-link light-icon alttxt titletxt" href="/apps/notas/" target="_blank" alt="go to project" title="Try it out"  alttxt="tryitout" titletxt="tryitout"></a>
 					</div>
 					<p class="txt" txt="mnotas1">cow</p>
 					<p class="txt" txt="mnotas2">cow</p>
@@ -813,11 +813,11 @@
 			<div>
 				<header>
 					scripts-and-things
-					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-scriptsandthings"></a>
+					<a class="closemodal light-icon alttxt titletxt" alt="close button" title="Close" modalparent="modal-scriptsandthings" alttxt="close" titletxt="close"></a>
 				</header>
 				<main>
 					<div class="projecticons">
-						<a class="github-link light-icon" href="https://github.com/idko2004/scripts-and-things" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/scripts-and-things" target="_blank" alt="github logo" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
 					<p class="txt" txt="mscripts1">wer</p>
 				</main>
